cabal-version: 2.4
name: hashes
version: 0.1.0.1
synopsis: Hash functions
Description: Efficient implementations of hash functions
homepage: https://github.com/larskuhtz/hs-hashes
bug-reports: https://github.com/larskuhtz/hs-hashes/issues
license: MIT
license-file: LICENSE
author: Lars Kuhtz
maintainer: lakuhtz@gmail.com
copyright: Copyright (c) 2019-2021 Lars Kuhtz <lakuhtz@gmail.com>
category: Data
tested-with:
    GHC==9.0.1
    GHC==8.10.7
    GHC==8.8.4
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/larskuhtz/hs-hashes.git

flag benchmark-memory
    description: Include implementations from memory package in benchmarks
    default: False
    manual: True

library
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Data.Hash.SipHash
        Data.Hash.FNV1
        Data.Hash.Class.Pure
        Data.Hash.Class.Pure.Salted
        Data.Hash.Class.Pure.Internal
        Data.Hash.Class.Mutable
        Data.Hash.Class.Mutable.Salted
        Data.Hash.Class.Mutable.Internal
    ghc-options:
        -Wall
        -mbmi2
        -msse4.2
        -O2
    build-depends:
        , base >=4.11 && <5
        , bytestring >=0.10

test-suite tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options:
        -Wall
        -rtsopts
        -threaded
        -with-rtsopts=-N
    main-is: Main.hs
    other-modules:
        Test.Data.Hash.SipHash
        Test.Data.Hash.FNV1
        Test.Data.Hash.Class.Pure
    build-depends:
        -- internal
        , hashes
        -- external
        , QuickCheck >= 2.13
        , base >=4.11 && <5
        , bytestring >=0.10

benchmark benchmarks
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options:
        -Wall
        -rtsopts
        -threaded
        -with-rtsopts=-N
        -mbmi2
        -msse4.2
        -O2
    build-depends:
        -- internal
        , hashes

        -- external
        , QuickCheck >= 2.13
        , base >=4.10 && <5
        , bytestring >=0.10
        , criterion >= 1.5

    if flag(benchmark-memory)
        build-depends:
            , memory >=0.14
        cpp-options: -DBENCHMARK_MEMORY=1

